--- a/01a_random_sample.ipynb
+++ b/01a_random_sample.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "01a_random_sample.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -33,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zukui/CHE358/blob/master/01a_random_sample.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Zukui/CHE358_python/blob/master/01a_random_sample.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +44,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Generate random sapmles from uniform distribution"
+        "## Generate random sapmles from uniform distribution"
       ]
     },
     {
@@ -93,7 +94,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Generate random samples from standard normal distribution "
+        "## Generate random samples from standard normal distribution "
       ]
     },
     {
@@ -137,7 +138,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Calculate the cumulative distribution function value of standard normal P(Z<1)"
+        "## Calculate the cumulative distribution function value of standard normal "
       ]
     },
     {
@@ -202,7 +203,7 @@
         "colab_type": "text"
       },
       "source": [
-        "empirical cdf from data points"
+        "## empirical cdf from data points"
       ]
     },
     {
