--- a/02a_simple_linear_regression.ipynb
+++ b/02a_simple_linear_regression.ipynb
@@ -34,7 +34,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zukui/CHE358/blob/master/02a_simple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Zukui/CHE358_python/blob/master/02a_simple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xbEhqezj29Zm",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Simple linear regression"
       ]
     },
     {
