--- a/02b_multiple_linear_regression.ipynb
+++ b/02b_multiple_linear_regression.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zukui/CHE358/blob/master/02b_multiple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Zukui/CHE358_python/blob/master/02b_multiple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -52,8 +52,11 @@
       "metadata": {
         "id": "RUJnQuJR1OyU",
         "colab_type": "code",
-        "outputId": "1ed7867c-6596-4298-a879-aaab1f0b4388",
-        "colab": {}
+        "outputId": "0f5ad49d-b5ca-46b0-e29f-abc2095f917a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -69,14 +72,13 @@
         "print(X[:5, :])\n",
         "theta = np.array([10, 1., .5, 0.1]) # true model parameters\n",
         "e = np.random.normal(size=N)\n",
-        "y = np.dot(X, theta) + e\n",
+        "Y = np.dot(X, theta) + e\n",
         "\n",
         "# Estimate the parameters\n",
-        "Xpinv = linalg.pinv2(X)   # (X'X)^-1*X'\n",
-        "thetahat = np.dot(Xpinv, y)\n",
+        "thetahat = np.linalg.inv(X.T@X)@X.T@Y\n",
         "print(\"Estimated theta:\\n\", thetahat)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
